# dbt-oxide

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test  NOTICE  README.md  SECURITY.md  UPSTREAM_TRACKING.md  cliff.toml  dev-requirements.txt  pyproject.toml
.changes/: 0.0.0.md  1.10.0-rc1.md  1.10.0-rc2.md  1.10.0.md  1.10.1.md  1.10.10.md  1.10.11.md  1.10.12.md  1.10.13.md  1.10.14.md  1.10.15.md  1.10.16.md  1.10.2.md  1.10.3.md  1.10.4.md  1.10.5.md  1.10.6.md  1.10.7.md  1.10.8.md  1.10.9.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: artifact-reviews.yml  build-wheels.yml  check-artifact-changes.yml  ci.yml  main.yml  model_performance.yml  nightly-release.yml  release.yml  schema-check.yml  structured-logging-schema-check.yml  test-repeater.yml
core/: pyproject.toml  setup.py
core/dbt/: compilation.py  deprecations.py  exceptions.py  tracking.py
core/dbt/cli/: flags.py  main.py  option_types.py  requires.py
core/dbt/clients/: jinja.py  oxide_jinja.py
core/dbt/config/: catalogs.py  profile.py  project.py  renderer.py  runtime.py
core/dbt/context/: base.py  providers.py
docs/guides/: changelog.md  profiling_guide.md
docs/plans/: open_source_publication.md  phase_1_graph_engine.md  phase_2_5_unified_data_layer.md  phase_2_zero_copy_manifest.md  phase_3_1_1_rust_manifest_serialization.md  phase_3_1_1_static_extraction.md  phase_3_1_minijinja_integration.md  phase_3_2_oxide_manifest_alignment.md
docs/profiling/: phase1_graph_performance_analysis.md
docs/roadmap/: rust_migration.md
performance/: README.md
performance/results/: parse___01_2000_simple_models.json  profile_dbt_parse.prof  profile_parse.prof  profiling_report_20251223.md
performance/scripts/: generate_chain_project.py  generate_comparison_report.py  profile_compile.py  profile_parse.py  run_comparison.sh  run_compile_benchmark.sh
src/dbt_rs/: AGENTS.md  Cargo.toml  manifest.json
src/dbt_rs/src/: data_layer.rs  graph.rs  lib.rs  manifest.rs  py_data_layer.rs  py_graph.rs  py_manifest.rs  py_manifest_builder.rs
src/dbt_rs/src/manifest/: config.rs  macro_lookup.rs  mod.rs  nodes.rs  resources.rs  semantic.rs  testing.rs  types.rs
src/dbt_rs/src/tests/: base_types.rs  components.rs  helpers.rs  logic.rs  macro_lookup.rs  manifest_builder.rs  manifest_maps.rs  mod.rs  nodes.rs  resolve.rs  resource_types.rs  resources.rs  serialization.rs
tests/unit/: test_compilation.py  test_graph_selection.py  test_rust_manifest_builder.py
(+3139 files in other folders)
