[project]
name = "dbt-oxide"
version = "0.1.0"
description = "High-performance Rust-accelerated dbt-core"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[tool.uv.workspace]
members = ["core"]

[tool.uv.sources]
dbt-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.109",
    "freezegun>=1.4",
    "dbt-postgres>=1.9",
    "mypy>=1.4",
    "ruff>=0.8",
    "maturin>=1.0,<2.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "src/dbt_rs/Cargo.toml"

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = [
    ".git",
    ".github",
    ".venv",
    "third-party-stubs",
    "scripts",
    "test",
    "performance",
    "core/dbt/docs/build",
    "core/dbt/events/core_types_pb2.py",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = [
    "E203",
    "E501",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = [
    "dbt",
    "dbt_adapters",
    "dbt_common",
    "dbt_extractor",
    "dbt_semantic_interfaces",
]
force-single-line = false
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
files = "core/dbt"
mypy_path = "third-party-stubs/"
namespace_packages = true
