[package]
name = "dbt_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "dbt_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.20" }
petgraph = "0.6"
pythonize = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[dev-dependencies]
# pyo3 without auto-initialize to allow pure Rust tests to run without Python
pyo3 = { version = "0.20" }

[build-dependencies]
pyo3-build-config = "0.20"
